fix: align thumb

--- a/packages/player/src/ui.scss
+++ b/packages/player/src/ui.scss
@@ -224,9 +224,9 @@ body {
     border-radius: 1px;
     height: 95%;
     background: #fff;
-    cursor: pointer;
+    cursor: pointer;    
     position: absolute;
-    right: 0;
+    right: -2px;
     top: 0;
     z-index: 10;
     transition: all .3s;
